# MyShell

./: CMakeLists.txt  README.md
scripts/: mycat.cpp  test
scripts/mycp/: mycp.cpp  utils.cpp  utils.h
scripts/myls/: myls.cpp  tree_json.cpp  tree_json.h  utils.cpp  utils.h
scripts/myls/table_printer/: table_printer.cpp  table_printer.h  table_printer.tpp.h
scripts/mymkdir/: mymkdir.cpp  utils.cpp  utils.h
scripts/mymv/: mymv.cpp  utils.cpp  utils.h
scripts/myrm/: myrm.cpp  utils.cpp  utils.h
src/: commands.cpp  commands.h  main.cpp  utils.cpp  utils.h
